# cmake-assert-tests

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: TestHelpers.cmake
src/: CMakeLists.txt  main.cpp  testlib.h
src/testlib/: add.cpp  add.h  fibonacci.h
src/testlib.test/: include.compile.pass.cpp
src/testlib/add.test/: add.pass.cpp  constexpr_add.pass.cpp  constructor.compile.fail.cpp  constructor.compile.pass.cpp  constructor.verify.cpp
src/testlib/fibonacci.test/: fibonacci.pass.cpp
tests/: CMakeLists.txt
